tested KNN classifier with feature scaling

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,14 @@
     "from scipy.io import arff\n",
     "import pandas as pd\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import LeaveOneOut"
+    "from sklearn.model_selection import LeaveOneOut\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,23 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "np.linalg.norm(): 4.184734278899916\n",
-      "euclidean1: 4.184734278899916\n",
-      "euclidean2: 4.184734278899916\n",
-      "euclidean3: 4.184734278899916\n",
-      "euclidean4: 4.184734278899916\n",
-      "euclidean5: 4.184734278899916\n",
-      "euclidean6: 4.184734278899916\n",
-      "euclidean7: 4.184734278899916\n",
-      "euclidean8: 4.184734278899916\n",
-      "euclidean9: 4.184734278899916\n"
+      "np.linalg.norm(): 4.424055650802779\n",
+      "euclidean1: 4.424055650802779\n",
+      "euclidean2: 4.424055650802779\n",
+      "euclidean3: 4.424055650802779\n",
+      "euclidean4: 4.424055650802779\n",
+      "euclidean5: 4.424055650802779\n",
+      "euclidean6: 4.424055650802779\n",
+      "euclidean7: 4.424055650802779\n",
+      "euclidean8: 4.424055650802779\n",
+      "euclidean9: 4.424055650802779\n"
      ]
     }
    ],
@@ -134,23 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "np.linalg.norm(): 5.66 µs ± 183 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean1: 6.92 µs ± 134 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean2: 6.96 µs ± 302 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean3: 6.34 µs ± 45.3 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean4: 6.3 µs ± 30.9 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean5: 4.04 µs ± 35.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean6: 3.24 µs ± 15.3 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean7: 4.28 µs ± 22.7 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean8: 3.28 µs ± 67.2 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "euclidean9: 4.07 µs ± 20 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "np.linalg.norm(): 11.3 µs ± 439 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean1: 14.3 µs ± 349 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean2: 14 µs ± 572 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean3: 13.3 µs ± 58.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean4: 14.3 µs ± 1.05 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean5: 8.97 µs ± 341 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean6: 6.77 µs ± 27.7 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean7: 8.93 µs ± 44.4 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean8: 6.98 µs ± 55.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "euclidean9: 8.84 µs ± 68.6 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -188,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.080950000000001\n",
-      "13.080950000000001\n",
-      "13.080950000000001\n"
+      "21.679720000000003\n",
+      "21.679720000000003\n",
+      "21.679720000000003\n"
      ]
     }
    ],
@@ -210,29 +212,19 @@
     "    return np.sum(np.abs(diff))\n",
     "\n",
     "# Output of functions\n",
-    "print(np.linalg.norm(diff, ord=1))\n",
-    "print(manhattan1(X[0], X[1]))\n",
-    "print(manhattan2(X[0], X[1]))"
+    "print(np.linalg.norm(x2 - x1, ord=1))\n",
+    "print(manhattan1(x1, x2))\n",
+    "print(manhattan2(x1, x2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.64 µs ± 32.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "5.41 µs ± 184 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "5.54 µs ± 327 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%timeit diff = X[1] - X[0]; np.linalg.norm(diff, ord=1)\n",
-    "%timeit manhattan1(X[0], X[1])\n",
+    "%timeit diff = x2 - x1; np.linalg.norm(diff, ord=1)\n",
+    "%timeit manhattan1(x, X[1])\n",
     "%timeit manhattan2(X[0], X[1])"
    ]
   },
@@ -247,13 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sklearn doesn't like y labels of type 'bytes'\n",
-    "y = y.astype('str')\n",
-    "\n",
+    "y = y.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No feature scaling\n",
     "def KNNclassifierWithLOO(X, y):\n",
     "    # Leave one out cross-validation\n",
     "    loo = LeaveOneOut()\n",
@@ -320,28 +320,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# With standard scaler\n",
+    "def KNNclassifierWithLOOandStandardScaler(X, y):\n",
+    "    # Leave one out cross-validation\n",
+    "    loo = LeaveOneOut()\n",
+    "    loo.get_n_splits(X)\n",
+    "\n",
+    "    # KNN classifier\n",
+    "    correct_count = 0;\n",
+    "    total_count = y.shape[0];\n",
+    "    classifier = KNeighborsClassifier(n_neighbors = 3)\n",
+    "    scaler = StandardScaler()\n",
+    "\n",
+    "    # Train on each split and predict on the single test example\n",
+    "    for train_index, test_index in loo.split(X):\n",
+    "        X_train = X[train_index]\n",
+    "        X_test = X[test_index]\n",
+    "        y_train = y[train_index]\n",
+    "        y_test = y[test_index]\n",
+    "        X_train = scaler.fit_transform(X_train)\n",
+    "        X_test = scaler.transform(X_test)\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        y_pred = classifier.predict(X_test)\n",
+    "        if y_pred == y_test:\n",
+    "            correct_count += 1\n",
+    "\n",
+    "    #print(correct_count, 'out of', total_count, 'correctly classified')\n",
+    "    #print('accuracy:', correct_count / total_count)\n",
+    "    return correct_count / total_count"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "accuracy = KNNclassifierWithLOOandStandardScaler(X, y)\n",
+    "print('accuracy:', accuracy)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# With min max scaler\n",
+    "def KNNclassifierWithLOOandMinMaxScaler(X, y):\n",
+    "    # Leave one out cross-validation\n",
+    "    loo = LeaveOneOut()\n",
+    "    loo.get_n_splits(X)\n",
+    "\n",
+    "    # KNN classifier\n",
+    "    correct_count = 0;\n",
+    "    total_count = y.shape[0];\n",
+    "    classifier = KNeighborsClassifier(n_neighbors = 3)\n",
+    "    scaler = MinMaxScaler()\n",
+    "\n",
+    "    # Train on each split and predict on the single test example\n",
+    "    for train_index, test_index in loo.split(X):\n",
+    "        X_train = X[train_index]\n",
+    "        X_test = X[test_index]\n",
+    "        y_train = y[train_index]\n",
+    "        y_test = y[test_index]\n",
+    "        X_train = scaler.fit_transform(X_train)\n",
+    "        X_test = scaler.transform(X_test)\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        y_pred = classifier.predict(X_test)\n",
+    "        if y_pred == y_test:\n",
+    "            correct_count += 1\n",
+    "\n",
+    "    #print(correct_count, 'out of', total_count, 'correctly classified')\n",
+    "    #print('accuracy:', correct_count / total_count)\n",
+    "    return correct_count / total_count"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "accuracy = KNNclassifierWithLOOandMinMaxScaler(X, y)\n",
+    "print('accuracy:', accuracy)"
+   ]
   }
  ],
  "metadata": {
