--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import LeaveOneOut\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -219,13 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.89 µs ± 335 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "4.84 µs ± 130 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "4.89 µs ± 362 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit diff = x2 - x1; np.linalg.norm(diff, ord=1)\n",
-    "%timeit manhattan1(x, X[1])\n",
-    "%timeit manhattan2(X[0], X[1])"
+    "%timeit manhattan1(x1, x2)\n",
+    "%timeit manhattan2(x1, x2)"
    ]
   },
   {
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,12 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# No feature scaling\n",
-    "def KNNclassifierWithLOO(X, y):\n",
+    "def KNNclassifierWithLOO(X, y, k):\n",
     "    # Leave one out cross-validation\n",
     "    loo = LeaveOneOut()\n",
     "    loo.get_n_splits(X)\n",
@@ -262,7 +273,7 @@
     "    # KNN classifier\n",
     "    correct_count = 0;\n",
     "    total_count = y.shape[0];\n",
-    "    classifier = KNeighborsClassifier(n_neighbors = 3)\n",
+    "    classifier = KNeighborsClassifier(n_neighbors = k)\n",
     "\n",
     "    # Train on each split and predict on the single test example\n",
     "    for train_index, test_index in loo.split(X):\n",
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -294,35 +305,35 @@
     }
    ],
    "source": [
-    "accuracy = KNNclassifierWithLOO(X, y)\n",
+    "accuracy = KNNclassifierWithLOO(X, y, 3) # 3 nearest neighbours\n",
     "print('accuracy:', accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "487 ms ± 45.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "836 ms ± 38.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit KNNclassifierWithLOO(X, y)"
+    "%timeit KNNclassifierWithLOO(X, y, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# With standard scaler\n",
-    "def KNNclassifierWithLOOandStandardScaler(X, y):\n",
+    "def KNNclassifierWithLOOandStandardScaler(X, y, k):\n",
     "    # Leave one out cross-validation\n",
     "    loo = LeaveOneOut()\n",
     "    loo.get_n_splits(X)\n",
@@ -330,7 +341,7 @@
     "    # KNN classifier\n",
     "    correct_count = 0;\n",
     "    total_count = y.shape[0];\n",
-    "    classifier = KNeighborsClassifier(n_neighbors = 3)\n",
+    "    classifier = KNeighborsClassifier(n_neighbors = k)\n",
     "    scaler = StandardScaler()\n",
     "\n",
     "    # Train on each split and predict on the single test example\n",
@@ -353,22 +364,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.8461538461538461\n"
+     ]
+    }
+   ],
    "source": [
-    "accuracy = KNNclassifierWithLOOandStandardScaler(X, y)\n",
+    "accuracy = KNNclassifierWithLOOandStandardScaler(X, y, 3)\n",
     "print('accuracy:', accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# With min max scaler\n",
-    "def KNNclassifierWithLOOandMinMaxScaler(X, y):\n",
+    "def KNNclassifierWithLOOandMinMaxScaler(X, y, k):\n",
     "    # Leave one out cross-validation\n",
     "    loo = LeaveOneOut()\n",
     "    loo.get_n_splits(X)\n",
@@ -376,7 +395,7 @@
     "    # KNN classifier\n",
     "    correct_count = 0;\n",
     "    total_count = y.shape[0];\n",
-    "    classifier = KNeighborsClassifier(n_neighbors = 3)\n",
+    "    classifier = KNeighborsClassifier(n_neighbors = k)\n",
     "    scaler = MinMaxScaler()\n",
     "\n",
     "    # Train on each split and predict on the single test example\n",
@@ -399,13 +418,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.8603988603988604\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = KNNclassifierWithLOOandMinMaxScaler(X, y, 3)\n",
+    "print('accuracy:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = KNNclassifierWithLOOandMinMaxScaler(X, y)\n",
-    "print('accuracy:', accuracy)"
+    "n_neighbours = [1, 3, 5, 7, 9, 11, 13, 15]\n",
+    "acc1 = []\n",
+    "acc2 = []\n",
+    "acc3 = []\n",
+    "\n",
+    "for k in n_neighbours:\n",
+    "    acc1.append(KNNclassifierWithLOO(X, y, k))\n",
+    "    acc2.append(KNNclassifierWithLOOandStandardScaler(X, y, k))\n",
+    "    acc3.append(KNNclassifierWithLOOandMinMaxScaler(X, y, k))\n",
+    "\n",
+    "plt.plot(n_neighbours, acc1, 'r-', label='No scaling')\n",
+    "plt.plot(n_neighbours, acc2, 'b-', label='Standard scaler')\n",
+    "plt.plot(n_neighbours, acc3, 'g-', label='MinMax scaler')\n",
+    "plt.xlabel('k')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xticks(n_neighbours)\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
